<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_400"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/auth_card"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_above="@id/loginButton"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_into_your_n_account"
                android:textColor="@color/red_500"
                android:textStyle="bold"
                android:textSize="25sp"
                android:padding="10dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_marginStart="15dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/johndoe_gmail_com"
                android:padding="15dp"
                android:drawableEnd="@drawable/baseline_email_24"
                android:drawablePadding="5dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_marginStart="15dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:padding="15dp"
                android:drawableEnd="@drawable/ic_lock_outline"
                android:drawablePadding="5dp"/>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/red_500"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_gravity="end"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:layout_centerHorizontal="true"/>

                <LinearLayout
                    android:layout_below="@id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    >

                    <ImageView
                        android:id="@+id/googleButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/google"
                        android:layout_marginEnd="20dp"/>

                    <ImageView
                        android:id="@+id/facebookButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/facebook"
                        android:layout_marginStart="20dp"/>

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/registerNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_now"
                    android:textColor="@color/red_500"
                    android:textStyle="bold"
                    android:layout_marginStart="3dp"
                    android:padding="5dp"/>
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/login"
            android:background="@drawable/button_background"/>


    </RelativeLayout>
</FrameLayout>